style.css
@font-face {
    font-family: 'Karla-Bold';
    src: url('fonts/Karla/Karla-Bold.eot');
    src: url('fonts/Karla/Karla-Bold.eot?#iefix') format('embedded-opentype'),
         url('fonts/Karla/Karla-Bold.woff') format('woff'),
         url('fonts/Karla/Karla-Bold.ttf') format('truetype'),
         url('fonts/Karla/Karla-Bold.svg#robotoregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Karla-BoldItalic';
    src: url('fonts/Karla/Karla-BoldItalic.eot');
    src: url('fonts/Karla/Karla-BoldItalic.eot?#iefix') format('embedded-opentype'),
         url('fonts/Karla/Karla-BoldItalic.woff') format('woff'),
         url('fonts/Karla/Karla-BoldItalic.ttf') format('truetype'),
         url('fonts/Karla/Karla-BoldItalic.svg#robotoregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Karla-Italic';
    src: url('fonts/Karla/Karla-Italic.eot');
    src: url('fonts/Karla/Karla-Italic.eot?#iefix') format('embedded-opentype'),
         url('fonts/Karla/Karla-Italic.woff') format('woff'),
         url('fonts/Karla/Karla-Italic.ttf') format('truetype'),
         url('font/Karla/Karla-Italic.svg#robotoregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Karla-Regular';
    src: url('fonts/Karla/Karla-Regular.eot');
    src: url('fonts/Karla/Karla-Regular.eot?#iefix') format('embedded-opentype'),
         url('fonts/Karla/Karla-Regular.woff') format('woff'),
         url('fonts/Karla/Karla-Regular.ttf') format('truetype'),
         url('fonts/Karla/Karla-Regular.svg#robotoregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Pacifico';
    src: url('fonts/Pacifico/Pacifico.eot');
    src: url('fonts/Pacifico/Pacifico.eot?#iefix') format('embedded-opentype'),
         url('fonts/Pacifico/Pacifico.woff') format('woff'),
         url('fonts/Pacifico/Pacifico.ttf') format('truetype'),
         url('fonts/Pacifico/Pacifico.svg#robotoregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

body {
    font-family: "Karla-Regular", cursive, serif;
    min-width: 100%;
    font-size: 16px;
    line-height: 1.25em;
    align-content: center;
    text-align: center;
    box-sizing: border-box;
    color: #2d2d2d;
}

header {
    /*display: flex;*/
    position:fixed;
    z-index: 1;
    top:0px;
    width:100%;
    background-color:black;
    text-align: center;
    padding-top: 10px;

}
.banner img {
    width: 40%;
}

/*header .navigation li {
    justify-content: flex-end;
}*/

nav ul {
    list-style: none;
    display: flex;
    justify-content: center;
    list-style-type: none;

    /*align-content: center;*/
    /*justify-content: flex-end;*/
}

nav ul li {
    display: inline-block;
    background-color: black;
    position: relative;
    overflow: hidden;
    margin: 0 8%;
}

.hero {
    background-image: linear-gradient(
    rgba(128,128,128, 0.3),
    rgba(128,128,128,0.3)),
    url("images/kayak-bkgd.jpg");
    color:white;
    background-size:cover;
    background-position: center;
    background-repeat: no-repeat;
    text-align:center;
    position:relative;
    top: 80px;
    min-width: 100%;
    min-height: 50%;
    /*margin-top:119px;*/
    /*display: block;*/
    margin: 30px auto;
    padding-bottom: 50px;;
    line-height: 3em;
}

h1, h3 {
    font-family: "Pacifico", cursive, serif;
    width: 100%;
    margin: 1em auto;
    text-shadow: 2px 2px 5px #999;
}

h1 {
    font-size: 100px;
}

h2 {
    color:#646464;
    font-family: "pacifico", cursive, serif;
}

h3 {
    font-size: 50px;
}
button {
    padding: 20px;
    font-size: 20px;
    text-transform: uppercase;
    background-color: #e2574c;
    color: white;
    border: none;
    border-radius:50px;
    box-shadow: 2px 5px 10px black;
}
#about, #rentals, #location{
    padding-top: 100px;
}

/*article, #about, #rentals, #location {
   margin: auto;
   position: relative;
   padding-top: 100px;
   background-color:white;
   width: 100%;
   align-content: center;
}*/

#about div img {
    min-width:95%;
    justify-content: space-between;
    align-content: center;
    display: block;
    margin: 20px auto;
    /*flex-direction: column;*/
    align-content: center;
    box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.36);    
}

@media all and (min-width:600px) {
article {
    color: blue;
}

#about div img {
    display: flex;
    align-content: center;
    text-align: center;
}

#rentals p {
    display: flex;
    text-align: left;
    max-width: 50%;
}

table {
    max-width: 50%;
}

.social {
    display: flex;
}

.social i {
    display: flex;
    justify-content: center;
}

.social p {
    display: flex;
}

.social-links{
    
}
}

@media all and (min-width: 1140px) {
    article{
        color: green;
}
}
    
img {
    max-width: 960px;
    justify-content: space-between;
}

#rentals table, #rentals th, #rentals td {
    /*border-collapse: collapse;*/
    align-content: center;
    text-align: center;
}

#rentals table {
    min-width: 90%;
    position: relative;
    left: 5%;
    border-collapse: collapse;
    
}
table, th, td {
    border: 1px solid #c8c8c8;
}

th {
    background-color: #e6e6e6
}

.map {
    min-height: 200px;
    min-width: 95%;
    align-content: center;
}

a {
    color:#e2574c;
}

a:hover {
    color:#b64036;
}

/*#rentals a {
    color:#b64036;
}*/

.address{
    color: #646464;
}

footer {
    text-align:center;
    background-color: black;
    color: white;
    min-width:100%;
    padding: 80px 0px;
}

footer a {
    color: white;
}
.social-logos {
    list-style: none;
    display: flex;
    justify-content: center;
    padding: 10px;
    align-content: center;
    margin: 1em auto;
}

.social-links {
    display: none;
}

/*.social {
display: flex;
flex-direction:right;
flex-direction: row;*/
/*align-content: right;
clear:both;
}

    */
.screen-reader-text {
   clip: rect(1px, 1px, 1px, 1px);
   position: absolute !important;
   height: 1px;
   width: 1px;
   overflow: hidden;
}

.screen-reader-text:focus {
    clip: auto !important;
    display: block;
    height: auto;
    left: 5px;
    top: 5px;
    width: auto;
    z-index: 100000; /* above all content */
  }
/*utility classes*/

